--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Namaste React By Author Amol Kodge",
   "main": "App.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "author": "Amol Kodge",
