--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "jest"
+    "test": "jest",
+    "watch-test": "jest --watch"
   },
   "author": "Amol Kodge",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@testing-library/jest-dom": "^6.0.1",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.6.3",
+    "jest": "^29.6.3",
+    "jest-environment-jsdom": "^29.6.3",
     "parcel": "^2.9.3",
     "postcss": "^8.4.28",
     "process": "^0.11.10",
